fixes smartben and what you expect on mobile

--- a/wp-content/themes/hodgesmace/style.css
+++ b/wp-content/themes/hodgesmace/style.css
@@ -300,10 +300,22 @@ input#s:focus {
   border-bottom: 1px solid #cad6f9;
 }
 
-#header .logo img {
+#header .logo {
   max-width: 190px;
-  width: 60%;
+  width: 75%;
   float: left;
+}
+
+#header .logo a {
+  height: 86px;
+  line-height: 82px;
+  display: block;
+}
+
+#header .logo img {
+  width: 100%;
+  height: auto;
+  vertical-align: middle;
 }
 
 #header .mobile-menu-toggle {
@@ -327,9 +339,7 @@ input#s:focus {
 }
 
 @media (min-width: 768px ) {
-  #header .logo img {
-    width: 80%;
-  }
+
   #header .mobile-menu-toggle {
     display: none;
   }
@@ -398,7 +408,7 @@ input#s:focus {
 @media (min-width: 768px ) {
 
   #main-menu {
-    padding: 27px 0;
+    padding: 29px 0;
   }
 
   .header_nav {
